--- a/js/tndisplay/displayAll.html
+++ b/js/tndisplay/displayAll.html
@@ -12,11 +12,10 @@
 				background: black;
 			}
 		</style>
-    <script language="JavaScript" type="text/javascript" src="../debug.js">
-		</script>
-    <script language="JavaScript" type="text/javascript" src="rotate.js">
-		</script>
-    <script language="JavaScript" type="text/javascript">
+    <script type="text/javascript" src="../debug.js"></script>
+    <script type="text/javascript" src="rotate.js"></script>
+    <script type="text/javascript">
+		// <![CDATA[
 
 			function getData(el, which) {
 				var stuff=el.getElementsByTagName(which);
@@ -127,6 +126,7 @@
 			function setup() {
 				loadItems();
 			}
+		// ]]>
 		</script>
 	</head>
 
