--- a/js/tndisplay/displayAll.html
+++ b/js/tndisplay/displayAll.html
@@ -43,61 +43,58 @@
 				var currentX=10;
 				var currentY=10;
 
-				var locations=new Array();
-				var baseXs=new Array();
 				var done=false;
-				// get the first half of the images.
-				for(var i=0; i<numImages/2 && !done; i++) {
+				// Get pairs of images to display
+				for(var i=0; i<numImages/2 && !done; i+=2) {
 
 					if((currentX + items[i].width) > window.innerWidth) {
 						currentX = 10;
 						currentY += imageDisplacementH;
 					}
 
-					if((currentY + 10) < window.innerHeight) {
-						// OK, this is a keeper
-						baseXs.push(currentX);
-						var myX = currentX + (imageDisplacementW - items[i].width)/2;
+					// Stop adding images when they no longer fit on the screen
+					if((currentY + imageDisplacementH) < window.innerHeight) {
+						var pic1x = currentX + (imageDisplacementW - items[i].width)/2;
 
 						// Let's load the images
-						var pic=new Image(items[i].width, items[i].height);
-						pic.src="imgs/" + items[i].id + ".jpg";
-						pic.id="img" + items[i].id;
+						var pic1=new Image(items[i].width, items[i].height);
+						pic1.src="imgs/" + items[i].id + ".jpg";
+						pic1.id="img" + items[i].id;
 
-						pic.setAttribute("style", "position: absolute; "
-							+ "left: " + myX + "px; top: " + currentY + "px;");
-						document.body.appendChild(pic);
-						locations.push(pic);
+						pic1.setAttribute("style", "position: absolute; "
+							+ "left: " + pic1x + "px; top: " + currentY + "px;");
+						document.body.appendChild(pic1);
 
-						makeImgInfo(pic.id, items[i].width, myX);
+						makeImgInfo(pic1.id, items[i].width, pic1x);
+
+						// And the second one
+						var pic2=new Image(items[i+1].width, items[i+1].height);
+						pic2.src="imgs/" + items[i+1].id + ".jpg";
+						pic2.id="img" + items[i+1].id;
+
+						var pic2x = currentX + (imageDisplacementW - items[i+1].width)/2;
+
+						pic2.setAttribute("style", "position: absolute; display:none; "
+							+ "left: " + pic2x + "px; "
+							+ "top: " + currentY + "px;");
+						document.body.appendChild(pic2);
+
+						makeImgInfo(pic2.id, items[i+1].width, pic2x);
+						addPair(pic1.id, pic2.id);
 
 						currentX += imageDisplacementW;
+
 					} else {
+						// no more room
 						done=true;
 					}
 				}
-				// Pair them with the second half.
-				for(var pairPos=0; pairPos<locations.length; pairPos++) {
-					var i=pairPos + locations.length;
 
-					var pic=new Image(items[i].width, items[i].height);
-					pic.src="imgs/" + items[i].id + ".jpg";
-					pic.id="img" + items[i].id;
-
-					var myX = baseXs[pairPos] + (imageDisplacementW - items[i].width)/2;
-
-					pic.setAttribute("style", "position: absolute; display:none; "
-						+ "left: " + myX + "px; "
-						+ "top: " + locations[pairPos].style.top) + "px;";
-					document.body.appendChild(pic);
-
-					makeImgInfo(pic.id, items[i].width, myX);
-					addPair(locations[pairPos].id, pic.id);
-				}
 				// Start the swapping.
-				swapImages();
+				setTimeout("swapImages();", 2000);
 			}
 
+			// Find out what images we have available for display
 			function loadItems() {
 				var req = new XMLHttpRequest();
 				req.onreadystatechange = function() {
