I don't need to divide by two *and* double-increment.
imported from: dustin@spy.net--snippets/js--main--1.0--patch-28

--- a/js/tndisplay/displayAll.html
+++ b/js/tndisplay/displayAll.html
@@ -45,7 +45,7 @@
 
 				var done=false;
 				// Get pairs of images to display
-				for(var i=0; i<numImages/2 && !done; i+=2) {
+				for(var i=0; i<numImages && !done; i+=2) {
 
 					if((currentX + items[i].width) > window.innerWidth) {
 						currentX = 10;
